--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "emailjs-com": "^2.6.4",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.2",
