--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^4.1.1",
     "emailjs-com": "^2.6.4",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
